Add pay job endpoint
