# openapi.json
@@ -128,6 +128,32 @@
           }
         }
       }
+    },
+    "/jobs/{id}/pay": {
+      "post": {
+        "description": "Pay for a job",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "Identifier of the job",
+            "schema": { "type": "integer" }
+          },
+          {
+            "in": "header",
+            "name": "profile_id",
+            "required": true,
+            "description": "Identifier of the user",
+            "schema": { "type": "integer" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Payment successfully processed"
+          }
+        }
+      }
     }
   }
 }
